# telegram_press_releases

./: .gitignore  README.md  pyproject.toml
press_releases/: config_reader.py  main.py  utils.py
press_releases/db/: crud.py  database.py  models.py
